@@ -8,7 +8,6 @@
 #
 #   $FINK_PACKAGE_NAME  package name
 
-echo "postinst for package '$FINK_PACKAGE_NAME'"
 if [ -z "$FINK_PACKAGE_NAME" ]; then
     echo "uh oh...$0 called with no \$FINK_PACKAGE_NAME!"
 fi
@@ -35,4 +34,10 @@ if [ "$2" = "configure" ]; then
     echo "dry-run-only debug"
 fi
 
-[ -z "$1" ] || "$@"
+if [ -n "$1" ]; then
+    if [ -x "$1" ]; then
+	"$@"
+    else
+	echo "uh oh...$0 told to run $1 but it doesn't exist!"
+    fi
+fi
