@@ -1,7 +1,12 @@
 2009-12-28  Daniel Macks  <dmacks@netspace.org>
 
+	* preinst.in, postinst.in, prerm.in, postrm.in: sanity-check deb
+	script before running it
+
+2009-12-28  Daniel Macks  <dmacks@netspace.org>
+
 	* dpkg-base-files.info.in, preinst.in, postinst.in, prerm.in,
-	postrm.in: dpkg now passes %n as $FINK_PACKAGE_NAME instead of bia
+	postrm.in: dpkg now passes %n as $FINK_PACKAGE_NAME instead of via
 	CLI parameter
 
 2009-12-21  Daniel Macks  <dmacks@netspace.org>
